# wasmpy

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  Makefile  README.md  appveyor.yml  linux.mk  opcodes.py  pyproject.toml  setup.py  wasmpy.sln  windows.mk
docs/: _coverpage.md  _sidebar.md  building.md  example_addition.md  index.html  quickstart.md
tests/: spectest.wat  test_control.wat  test_numeric.wat  test_parametric.wat  test_pure_values.py  test_variable.wat
tests/test_pure_python/: test_values.py
wasmpy/: __init__.py  globals.cpp  hooks.py  instructions.py  lib.hpp  linux_x86.cpp  memories.cpp  module.py  module_binary.py  module_text.py  native.py  nativelib.cpp  nativelib.hpp  opcodes.hpp  opcodes.json  opcodes.py  sections.py  sections_binary.py  sections_text.py  spectest.cpp  types.py  util.py  utils.py  values.py  wasi.c  wasi.cpp  wasi_snapshot_preview1.c  wasi_snapshot_preview1.h  wasi_unstable.h  win_x86.cpp  x86.cpp  x86.hpp  x86_native.cpp  x86_win.cpp
wasmpy/binary/: __init__.py  instructions.py  module.py  sections.py  types.py  values.py
wasmpy/include/: globals.hpp  memories.hpp  nativelib.hpp
wasmpy/script/: __init__.py
wasmpy/text/: __init__.py  instructions.py  module.py  sections.py  wat.peg
wasmpy/wasi/: __init__.py  common.c  common.h  snapshot_preview1.c  unstable.c  wasi_common.c  wasi_common.h  wasi_snapshot_preview1.c  wasi_snapshot_preview1.h  wasi_unstable.c
wasmpy/wast/: spectest.cpp
wasmpy/win_x86/: common.h  controlInst.cpp  controlInst.h  numericInst.c  numericInst.cpp  numericInst.h  parametricInst.c  (+2 more)
(+732 files in other folders)
